<resources>
    <string name="app_name">BeerRate</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_explore">Explore</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_beers">My Beers</string>
    <string name="types_of_beer">Types of beer</string>
    <string name="action_search">Search</string>
    <string name="edit">Edit</string>
    <string name="toggle">Toggle</string>
    <string name="styles_of_beer">Styles of beer</string>
    <string name="save">Save</string>
    <string name="pref">pref</string>
    <string name="skip">skip</string>
    <string name="search">Search</string>
    <string name="beer_type">%1$s%2$s</string>
    <string name="user_rating">User rating</string>
    <string name="beer_style">%1$s%2$s</string>
    <string name="search_title">Search for beers</string>
</resources>