<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_preferences">

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="com.beehive.beerrate.ui.preference.PreferenceFragment"
        android:label="@string/title_preferences"
        tools:layout="@layout/fragment_preference" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.beehive.beerrate.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_delete"
        android:name="com.beehive.beerrate.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.beehive.beerrate.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_search" />
</navigation>